# TerrainViewerWidget

./: CMakeLists.txt  README.md  TerrainViewer.sln  TerrainViewer.sln.DotSettings
TerrainViewer/: CMakeLists.txt  TerrainViewer.vcxproj  TerrainViewer.vcxproj.filters  camera.cpp  camera.h  flow.cpp  flow.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.qrc  mainwindow.ui  occlusion.cpp  occlusion.h  openterraindialog.cpp  openterraindialog.ui  parameterdock.cpp  parameterdock.ui  terrain.cpp  terrain.h  terrainimages.cpp  terrainimages.h  terrainviewerparameters.h  terrainviewerwidget.cpp  terrainviewerwidget.h  tessellation_utils.cpp  tessellation_utils.h  utils.h  watersimulation.cpp  watersimulation.h
TerrainViewer/Shaders/: compute_normals.glsl  compute_water_height.glsl  fragment_shader.glsl  tessellation_control.glsl  tessellation_evaluation.glsl  vertex_shader.glsl
TerrainViewerWidget/: CMakeLists.txt
TerrainViewerWidget/include/: openterraindialog.h  parameterdock.h  terrain.h  terrainimages.h  terrainviewerparameters.h  terrainviewerwidget.h  utils.h  watersimulation.h
TerrainViewerWidget/resources/: terrainviewerwidget.qrc
TerrainViewerWidget/resources/shaders/: compute_normals.glsl  compute_water_flow.glsl  tessellation_control.glsl  tessellation_evaluation.glsl
TerrainViewerWidget/source/: camera.cpp  occlusion.cpp  parameterdock.cpp  terrainimages.cpp  terrainviewerwidget.cpp  watersimulation.cpp
cmake/: qt6.cmake
